--- a/sass/components/_lorem-section.scss
+++ b/sass/components/_lorem-section.scss
@@ -57,3 +57,37 @@
     margin-right: 30px;
   }
 }
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .loremSection {
+    padding-top: 60px;
+    margin-bottom: 30px;
+
+    &__list {
+      width: 450px;
+      height: 994px;
+      flex-direction: column;
+      margin: 0px;
+    }
+    &__title {
+      text-align: center;
+      width: 100%;
+    }
+    &__text {
+      width: 100%;
+      margin-bottom: 30px;
+    }
+    &__cards {
+      width: 450px;
+      height: 120px;
+      border-radius: 4px;
+    }
+    &__area {
+      width: 100%;
+      margin-right: 0px;
+    }
+    &__area:not(:last-child) {
+      margin-right: 0px;
+    }
+  }
+}
