--- a/sass/components/_what-we-do-section.scss
+++ b/sass/components/_what-we-do-section.scss
@@ -50,3 +50,8 @@
     letter-spacing: 0.03em;
   }
 }
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .what-we-do {
+    display: none;
+  }
+}
