--- a/sass/components/_teamcard-section.scss
+++ b/sass/components/_teamcard-section.scss
@@ -114,6 +114,9 @@
     &__cards {
       display: inline-block;
     }
+    &__figure {
+      text-align: center;
+    }
     &__figure > img {
       width: 450px;
       height: 460px;
