--- a/sass/components/_lorem-section.scss
+++ b/sass/components/_lorem-section.scss
@@ -65,7 +65,7 @@
 
     &__list {
       width: 450px;
-      height: 994px;
+      height: auto;
       flex-direction: column;
       margin: 0px;
     }
