--- a/sass/components/_teamcard-section.scss
+++ b/sass/components/_teamcard-section.scss
@@ -103,15 +103,22 @@
     cursor: $cursor;
   }
 }
+
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .teamcard {
     width: 100%;
-    height: 2761px;
+    height: auto;
     padding-top: 60px;
+    padding-bottom: 60px;
+    background-color: #f5f4fa;
+    &__section {
+      display: flex;
+    }
     &__list {
       flex-direction: column;
     }
     &__cards {
+      width: 450px;
       display: inline-block;
     }
     &__figure {
