lorem section 768 end

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -144,7 +144,8 @@
   }
 }
 // end-newsletter
-@media screen and (min-width: 320px) and (max-width: 480px) {
+// 480
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .footer {
     display: block;
     text-align: center;
@@ -197,3 +198,4 @@
     left: 125px;
   }
 }
+// 480
