--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -49,7 +49,8 @@
     height: 60px;
   }
 }
-@media screen and (min-width: 320px) and (max-width: 480px) {
+// 480
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .clients-section {
     width: 450px;
     height: auto;
@@ -76,3 +77,4 @@
     }
   }
 }
+// 480
