--- a/sass/components/_lorem-section.scss
+++ b/sass/components/_lorem-section.scss
@@ -53,12 +53,9 @@
     text-align: left;
     width: 270px;
   }
-  &__area:not(:last-child) {
-    margin-right: 30px;
-  }
 }
-
-@media screen and (min-width: 320px) and (max-width: 480px) {
+// 480
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .loremSection {
     padding-top: 60px;
     margin-bottom: 30px;
@@ -66,7 +63,7 @@
     &__list {
       width: 450px;
       height: auto;
-      flex-direction: column;
+      flex-wrap: wrap;
       margin: 0px;
     }
     &__title {
@@ -88,6 +85,35 @@
     }
     &__area:not(:last-child) {
       margin-right: 0px;
+    }
+  }
+}
+// 480
+// 768
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .loremSection {
+    padding-top: 60px;
+    margin-bottom: 45px;
+    &__list {
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+      gap: 30px;
+      flex-basis: auto;
+      justify-content: space-between;
+      max-width: 738px;
+      height: 522px;
+    }
+    &__area {
+      width: 354px;
+      height: auto;
+    }
+    &__cards {
+      width: 354px;
+      height: 120px;
+    }
+    &__text {
+      width: 354px;
     }
   }
 }
