--- a/sass/components/_main-section.scss
+++ b/sass/components/_main-section.scss
@@ -17,7 +17,7 @@
   background-position: center;
   background-size: cover;
   max-width: 1600px;
-  max-height: 600px;
+  max-height: auto;
 
   &__title.container {
     display: flex;
