--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -99,6 +99,7 @@
 /* order  */
 .order-form {
   &__label {
+    display: block;
     font-size: 12px;
     font-weight: 400;
     line-height: 1.16;
@@ -150,3 +151,27 @@
   }
 }
 /* end - order-form */
+// 480
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  @include mobile-modal-window-and-input(
+    $mobile-window-width,
+    $mobile-window-height,
+    $mobile-modal-input-width
+  );
+
+  .custom-checkbox {
+    width: $mobile-modal-input-width;
+    font-size: 12px;
+    line-height: 0.85;
+    &__label {
+      padding-left: 22px;
+      font-size: 12px;
+      line-height: 0.85;
+    }
+    &__reg {
+      font-size: 12px;
+      line-height: 0.85;
+    }
+  }
+}
+// 480
