--- a/sass/components/_what-we-do-section.scss
+++ b/sass/components/_what-we-do-section.scss
@@ -50,9 +50,11 @@
     letter-spacing: 0.03em;
   }
 }
-
-@media screen and (min-width: 320px) and (max-width: 480px) {
+// 480
+@media screen and (min-width: 320px) and (max-width: 1200px)
+ {
   .what-we-do {
     display: none;
   }
 }
+// 480
