--- a/sass/components/_teamcard-section.scss
+++ b/sass/components/_teamcard-section.scss
@@ -139,7 +139,7 @@
 @media screen and (min-width: 768px) and (max-width: 1200px) {
   .teamcard {
     padding-top: 60px;
-    margin-bottom: 60px;
+    padding-bottom: 60px;
     display: grid;
     align-self: center;
     &__title {
