--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -33,9 +33,7 @@
     transition-duration: $transition-duration;
     transition-timing-function: $timing-function;
   }
-  &__image-card:not(:last-child) {
-    margin-right: 30px;
-  }
+
   &__image-card:hover,
   &__image-card:focus,
   &__image-card:active {
@@ -78,3 +76,28 @@
   }
 }
 // 480
+// 768
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .clients-section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    &__title {
+      margin-bottom: 30px;
+    }
+    &__image-box {
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+      gap: 30px;
+      flex-basis: auto;
+      justify-content: space-between;
+      max-width: 738px;
+      height: 214px;
+    }
+    &__image-card {
+      margin-right: 0px;
+      width: 226px;
+      height: 92px;
+    }
+  }
+}
