--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -37,6 +37,7 @@ $mobile-modal-input-width: 370px;
     height: $mobile-window-height;
     &__form-title {
       width: $modal-input-width-mobile;
+      height: 60px;
     }
     &__form-position {
       width: $modal-input-width-mobile;
