--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -77,7 +77,7 @@
 }
 // 480
 // 768
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .clients-section {
     padding-top: 60px;
     padding-bottom: 60px;
@@ -99,5 +99,12 @@
       width: 226px;
       height: 92px;
     }
+  }
+}
+// 768`
+// 1199
+@media screen and (min-width: 1199px) {
+  .clients-section__image-card:not(:last-child) {
+    margin-right: 30px;
   }
 }
