--- a/sass/components/_what-we-do-section.scss
+++ b/sass/components/_what-we-do-section.scss
@@ -51,8 +51,7 @@
   }
 }
 // 480
-@media screen and (min-width: 320px) and (max-width: 1200px)
- {
+@media screen and (min-width: 320px) and (max-width: 1199px) {
   .what-we-do {
     display: none;
   }
