--- a/sass/components/_lorem-section.scss
+++ b/sass/components/_lorem-section.scss
@@ -1,4 +1,4 @@
-.loremSection {
+.lorem-section {
   display: flex;
   justify-content: center;
   padding-top: 94px;
@@ -57,7 +57,7 @@
 }
 // 480
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  .loremSection {
+  .lorem-section {
     padding-top: 60px;
     margin-bottom: 30px;
 
@@ -89,7 +89,7 @@
 // 480
 // 768
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .loremSection {
+  .lorem-section {
     padding-top: 60px;
     margin-bottom: 45px;
     &__list {
@@ -116,7 +116,7 @@
   }
 }
 @media screen and (min-width: 1200px) {
-  .loremSection__area:not(:last-child) {
+  .lorem-section__area:not(:last-child) {
     margin-right: 30px;
   }
 }
