before mobile button

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,3 +13,4 @@
 @import "./components/projects-sections";
 @import "./components/teamcard-section";
 @import "./components/what-we-do-section";
+@import "./components/mobile-button";
